swagger country init
