# storage/api-docs/api-docs.json
@@ -441,6 +441,34 @@
                 }
             }
         },
+        "/api/v1/country": {
+            "get": {
+                "tags": [
+                    "Countries"
+                ],
+                "summary": "Get list of countries",
+                "description": "Returns list of countries",
+                "operationId": "getCountriesList",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CountryCollection"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/api/v1/product": {
             "get": {
                 "tags": [
@@ -1150,6 +1178,54 @@
                         "type": "integer"
                     },
                     "name": {
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "CountryCollection": {
+                "title": "CountryCollection",
+                "description": "Country collection",
+                "properties": {
+                    "countries": {
+                        "description": "Country Collection",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/CountryResource"
+                        }
+                    },
+                    "pagination": {
+                        "properties": {
+                            "total": {
+                                "type": "integer"
+                            },
+                            "count": {
+                                "type": "integer"
+                            },
+                            "per_page": {
+                                "type": "integer"
+                            },
+                            "current_page": {
+                                "type": "integer"
+                            },
+                            "total_page": {
+                                "type": "integer"
+                            }
+                        },
+                        "type": "object"
+                    }
+                },
+                "type": "object"
+            },
+            "CountryResource": {
+                "title": "CountryResource",
+                "description": "Country resource",
+                "properties": {
+                    "name": {
+                        "description": "Transform the resource into an array.",
+                        "type": "string"
+                    },
+                    "key": {
                         "type": "string"
                     }
                 },
